<resources>

    <!-- app strings -->
    <string name="app_name">Contag</string>
    <string name="facebook_app_id">1487599681495272</string>
    <string name="gcm_sender_id">573623348770</string>

    <!-- intent filters -->
    <string name="intent_filter_sms">com.contag.app.sms</string>
    <string name="intent_filter_contacts_updated">com.contag.app.updated</string>
    <string name="intent_filter_contacts_request">com.contag.app.request</string>
    <string name="intent_filter_user_received">com.contag.app.user.got</string>
    <string name="intent_filter_interest_suggestion">com.contag.app.interest.suggestion</string>
    <string name="intent_filter_interest_updated">com.contag.app.interest.updated</string>
    <string name="intent_filter_date_set">com.contag.app.date.set</string>
    <string name="intent_filter_user_social">com.contag.app.social.updated</string>
    <string name="intent_filter_custom_share">com.contag.app.custom.share</string>
    <string name="intent_filter_interest_post">com.contag.app.interest.post</string>
    <string name="intent_filter_edit_mode_enabled">com.contag.app.toogle.swipe</string>
    <string name="intent_filter_profile_picture_changed">com.contag.app.profile.picture</string>
    <string name="intent_filter_contag_contact_inserted">com.contag.app.contag.contag.inserted</string>
    <string name="intent_filter_notification_count">com.contag.app.notification.count</string>
    <!-- action bar items -->
    <string name="action_settings">Settings</string>
    <string name="action_edit_profile">Edit Profile</string>

    <!-- ui elements -->
    <string name="login">Go</string>
    <string name="enter_phone_num">Enter your 10 digit phone number</string>
    <string name="enter_otp">Enter otp</string>
    <string name="otp_msg">We have sent an OTP to your number, please enter it to proceed.</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_accounts">Add your social media accounts to your Contag Profile.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="contag_id">Enter your 8 character CONTAG ID </string>
    <string name="contag_id_not_available">It seems the CONTAG ID you wanted is unavailable.</string>
    <string name="create_user">SUBMIT</string>
    <string name="sync_fb">Sync with facebook</string>
    <string name="invite_to_cunt">INVITE</string>
    <string name="fb_unsync_msg">remove facebook</string>
    <string name="name_hint">Enter your full name</string>
    <string name="name_label">Name</string>
    <string name="gender_label">Gender</string>
    <string name="proceed">Proceed</string>
    <string name="edit">Edit</string>
    <string name="request">Request</string>
    <string name="filter">Apply filter</string>
    <string name="update">Update</string>
    <string name="sync_gplus">Link Google</string>
    <string name="sync_twitter">Link twitter</string>
    <string name="unsync_instagram">Disconnect Instagram</string>
    <string name="sync_instagram">Link Instagram</string>
    <string name="unsync_linkedin">Disconnect LinkedIn</string>
    <string name="sync_linkedin">Link LinkedIn</string>
    <string name="sync_facebook">Link Facebook</string>
    <string name="unsync_facebook">Disconnect Facebook</string>
    <string name="unblock_user">Unblock</string>
    <string name="unmute_user">Unmute</string>
    <string name="notification">Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="share_my_profile">Share My Profile</string>
    <string name="rate_contag">Rate Us</string>
    <string name="block_list">Block List</string>
    <string name="mute_list">Mute List</string>
    <string name="see_more">See more</string>
    <string name="logout">Logout</string>
    <string name="share_with">SHARE WITH</string>
    <string name="type_for_suggestions">Start typing for suggestions</string>
    <string name="connected_as">Connected As : </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="title_activity_fuck">ContagActivity</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="save_changes">Save Changes</string>
    <string name="reject">Reject</string>
    <string name="allow">Allow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fieldname">Allow</string>
    <string name="value">Allow</string>


    <string name="action_example">Example action</string>
    <string name="label_personal_details">Personal Details</string>
    <string name="label_address">Address:</string>
    <string name="label_blood_group">Blood Group:</string>
    <string name="label_birthday">Birthday:</string>
    <string name="title_activity_linked_in">LinkedInActivity</string>
    <string name="title_activity_instagram">InstagramActivity</string>
    <string name="title_activity_notifications">NotificationsActivity</string>

    <string name="add_interest">Add Interest</string>

    <item type="id" name="INTEREST_POSITION"/>
    <item type="id" name="INTEREST_OBJECT" />
</resources>
