<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_social_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="20dp"
    android:paddingTop="0dp">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/rl_top">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_field_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"

        android:background="@drawable/btn_add"
        android:visibility="gone" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginRight="5dp"
        android:drawableRight="@drawable/share_another"
        android:layout_alignParentRight="true"

        android:visibility="gone" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_connected_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_field_name"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/connected_as"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_field_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_connected_as"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/tv_connected_as"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:text="@string/abc_action_bar_home_description"
        android:textColor="@color/white" />
</RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.3"
        android:id="@+id/view_line"
        android:layout_marginTop="20dp"
        android:layout_below="@id/rl_top"
        android:background="@color/light_gray" />

    <RelativeLayout
        android:id="@+id/rl_social_edit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_top"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/rl_social_edit_container_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_field_base_value"




                android:layout_width="wrap_content"
                android:layout_height="25dp"

                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:theme="@style/EditTextTheme"

                android:textColor="@color/white"

                android:textSize="13sp"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_field_value"
                android:layout_width="match_parent"
                android:layout_height="25dp"

                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:theme="@style/EditTextTheme"
                android:layout_toRightOf="@id/et_field_base_value"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_g_plus_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:background="@drawable/bg_google_plus"
                android:drawableLeft="@drawable/googleplus_copy"
                android:text="@string/sync_gplus"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_twitter_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_twitter"
                android:drawableLeft="@drawable/twitter_copy"
                android:textAllCaps="false"
                android:gravity="center"
                android:text="@string/sync_twitter"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_linkedin_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:background="@drawable/bg_linkedin"
                android:drawableLeft="@drawable/linkedin"
                android:gravity="center"
                android:text="@string/sync_linkedin"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_instagram_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_insta"
                android:textAllCaps="false"
                android:gravity="center"
                android:drawableLeft="@drawable/instagram"
                android:text="@string/sync_instagram"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="gone" />

            <com.facebook.login.widget.LoginButton
                xmlns:fb="http://schemas.android.com/apk/res-auto"
                android:id="@+id/btn_facebook_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"

                android:textSize="13sp"
                 android:gravity="center"
                android:drawableLeft="@drawable/com_facebook_button_icon"
                fb:login_text="@string/sync_fb"
                fb:logout_text="@string/fb_unsync_msg" />
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/rl_top"
        android:layout_marginLeft="30dp"
        android:background="@drawable/bg_thin_button"
        android:minHeight="30dp"
        android:minWidth="30dp"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/disconnect"
        android:layout_alignParentRight="true"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="visible" />

    <include
        android:id="@+id/pb_delete_social"
        layout="@layout/layout_progress_bar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/btn_disconnect"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/btn_disconnect" />

</RelativeLayout>