<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_splash2">


    <com.contag.app.view.CircularImageView
        android:id="@+id/iv_profile_img"
        android:layout_width="62dp"
        android:layout_marginTop="30dp"
        android:layout_height="62dp"
        android:background="@drawable/default_profile_pic_small"
        />


    <LinearLayout
        android:id="@+id/ll_profile_container"
        android:layout_width="match_parent"
        android:layout_below="@id/iv_profile_img"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/labelStyle"
                    android:text="@string/name_label" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:padding="5dp"
                    android:background="@drawable/bg_gray_rect"
                    android:hint="@string/name_hint"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_gray"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/labelStyle"
                    android:text="@string/gender_label" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/radio_selector"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:textColor="@drawable/radio_text_selector"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="5dp"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/radio_selector"
                        android:button="@null"
                        android:gravity="center"
                        android:textColor="@drawable/radio_text_selector"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="5dp"
                        android:text="Female"
                        />

                </RadioGroup>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_profile_container"
        android:layout_marginTop="20dp"
        android:background="@color/filter_selection"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_fb_container"
        android:layout_width="fill_parent"
        android:layout_below="@id/btn_proceed"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.facebook.login.widget.LoginButton
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/btn_fb_sync"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            fb:login_text="@string/sync_fb"
            fb:logout_text="Unsync your facebook account" />
    </LinearLayout>

</RelativeLayout>
