<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.contag.app.fragment.LoginFragment"
   >

  <ImageView
        android:id="@+id/iv_contag_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/contag_login_screen"/>



<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20dp">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_phone_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_gray_rect"
        android:hint="@string/enter_phone_num"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:maxLength="10"
        android:layout_marginTop="50dp"
        android:singleLine="true"
        android:layout_marginBottom="-10dp"
        android:textColor="@color/black"
        android:textSize="15sp" />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_prefix"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="+91"
        android:textColor="@color/black"
        android:layout_alignLeft="@id/et_phone_num"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:textSize="14sp"
        />




    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/paper_plane"
       android:layout_marginRight="5dp"
        android:layout_centerVertical="true"
        android:layout_alignRight="@id/et_phone_num"

        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_otp_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:text="@string/otp_msg"
        android:paddingTop="10dp"
        android:textSize="15sp"
        android:visibility="gone"
        android:textColor="@color/white"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/resend_otp"
        android:visibility="gone"
        android:textColor="@color/resend_otp_btn"
        android:textSize="15sp" />

    <include
        android:id="@+id/pb_login"
        layout="@layout/layout_progress_bar" />
</RelativeLayout>
</RelativeLayout>
